--- a/CustomeSerilogExample/appsettings.json
+++ b/CustomeSerilogExample/appsettings.json
@@ -1,12 +1,76 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
+        "MinimumLevel": {
+            "Default": "Information"
+        },
+        "WriteTo": [
+            {
+                "Name": "MSSqlServer",
+                "Args": {
+                    "connectionString": "Data Source=TEJAS_JAWALKAR;Initial Catalog=SeriLog;Integrated Security=True;Trust Server Certificate=True",
+                    "tableName": "LogEvents",
+                    "autoCreateSqlTable": true,
+                    "columnOptionsSection": {
+                        "AdditionalColumns": [
+                            {
+                                "ColumnName": "UserId",
+                                "DataType": "NVarChar"
+                            },
+                            {
+                                "ColumnName": "ControllerName",
+                                "DataType": "NVarChar"
+                            },
+                            {
+                                "ColumnName": "MethodName",
+                                "DataType": "NVarChar"
+                            },
+                            {
+                                "ColumnName": "MethodType",
+                                "DataType": "NVarChar"
+                            },
+                            {
+                                "ColumnName": "AccessDateTime",
+                                "DataType": "DateTime"
+                            }
+                        ]
+                    }
+                }
+            },
+            {
+                "Name": "Console",
+                "Args": {
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level}] {Message:lj} {Properties}{NewLine}{Exception}"
+                }
+            }
+        ],
+        "Filter": [
+            {
+                "Name": "ByExcluding",
+                "Args": {
+                    "expression": "ContainsKey(SourceContext) and (SourceContext like '%Microsoft%' or SourceContext like '%System%')"
+                }
+            },
+            {
+                "Name": "ByExcluding",
+                "Args": {
+                    "expression": "ContainsKey(RequestPath) and (RequestPath like '%.css%' or RequestPath like '%.js%' or RequestPath like '%.jpg%' or RequestPath like '%.png%')"
+                }
+            }
+        ],
+        "Enrich": [
+            { "Name": "FromLogContext" },
+            {
+                "Name": "WithProperty",
+                "Args": {
+                    "name": "ApplicationName",
+                    "value": "MyApp"
+                }
+            }
+        ]
     },
     "ConnectionStrings": {
         "connectionstring": "Data Source=TEJAS_JAWALKAR;Initial Catalog=SeriLog;Integrated Security=True;Trust Server Certificate=True"
     },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*"
 }
