--- a/CustomeSerilogExample/appsettings.Development.json
+++ b/CustomeSerilogExample/appsettings.Development.json
@@ -30,13 +30,26 @@
                                 "DataType": "NVarChar"
                             },
                             {
-                                "ColumnName": "AccessDateTime",
+                                "ColumnName": "UTCTime",
                                 "DataType": "DateTime"
                             },
                             {
                                 "ColumnName": "Namespaces",
                                 "DataType": "NVarChar"
+                            },
+                            {
+                                "ColumnName": "IpAddress",
+                                "DataType": "NVarChar"
+                            },
+                            {
+                                "ColumnName": "BrowserUsed",
+                                "DataType": "NVarChar"
+                            },
+                            {
+                                "ColumnName": "OperatingSystem",
+                                "DataType": "NVarChar"
                             }
+                            
                         ]
                     }
                 }
